[package]
name = "installer"
version = "0.2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
question = "0.2.2"
reqwest = { version = "0.11.14", features = ["blocking"] }
which = "4.4.0"
#tokio minimum feature async main
#tokio = { version = "1.25.0", features = ["full"] }


[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.'cfg(target_env="msvc")']
rustflags = ["-C", "target-feature=+crt-static"]

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.12"

[build-dependencies]
static_vcruntime = "2.0"

[profile.release]
lto = true
debug = false
opt-level = "z"
strip = true
codegen-units = 1

